# SonicForces_IG_Timer

./: CMakeLists.txt  LICENSE  README.md
assets/: icon.xcf
src/: LCD_Solid.c  main.cpp  proc.cpp  proc.h  programCli.cpp  programCli.hpp  programGui.cpp  programGui.hpp
